tests/snapshots/tui_snapshot_tests__tool_diff_inline.snap
---
source: tests/tui_snapshot_tests.rs
assertion_line: 245
expression: capture_buffer(&mut app)
---
╭──────────────────────────────────────────────────────────────────────────────╮
│🖥 Tark Terminal  <WORKING_DIR>                                │
│                                                                              │
│╭ Messages ──────────────────────────────────────────────────────────────────╮│
││                                                                            ││
││─ › ✓ ▼ write_file                                                          ││
│││    Preview                                                                ││
│││    --- a/foo.txt                                                          ││
│││    +++ b/foo.txt                                                          ││
│││    @@                                                                     ││
│││    - old line                                                             ││
│││    + new line                                                             ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
│╰────────────────────────────────────────────────────────────────────────────╯│
│                                       ·                                      │
│╭ Prompt ────────────────────────────────────────────────────────────────────╮│
││ Type a message...                                                          ││
││                                                                            ││
││                                                                            ││
│╰────────────────────────────────────────────────────────────────────────────╯│
│Build ▼  🟢  Balanced ▼  [🧠 ] [💭 ]  ≡ 7                ● tark_llm TARK_SIM  [?]│
╰──────────────────────────────────────────────────────────────────────────────╯
