tests/snapshots/tui_snapshot_tests__tool_diff_split.snap
---
source: tests/tui_snapshot_tests.rs
assertion_line: 262
expression: capture_buffer(&mut app)
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│Tark  <WORKING_DIR>                                                                ╭ Panel ──────────────────────────╮│
│                                                                                   │  VIM: INSERT                    ↑│
│╭ Messages ───────────────────────────────────────────────────────────────────────╮│                                 █│
││                                                                                 ││▼ Session                        █│
││─ › ✓ ▼ write_file                                                               ││  Session                        █│
│││    Preview                                                                     ││  $0.015 (3 models) ▼            █│
│││    --- a/foo.txt                                                               ││  0 tokens total                 █│
│││    +++ b/foo.txt                                                               ││                                 █│
│││    @@                                                                          ││▼ Context  14.8k                 █│
│││    - old line                                                                  ││  14.8k / 128.0k tokens (11.6%)  █│
│││    + new line                                                                  ││  ██░░░░░░░░░░░░░░░░░░           █│
││                                                                                 ││  Sys: 1.5k  Hist: 12.0k         █│
││                                                                                 ││  Tools: 800  Files: 500         █│
││                                                                                 ││  LOADED CONTEXT (0)             █│
│╰─────────────────────────────────────────────────────────────────────────────────╯│▶ Tasks 8                        █│
│                                         ·                                         │▼ ⑂ Subagents 0/5•               █│
│╭ Prompt ─────────────────────────────────────────────────────────────────────────╮│                                 █│
││ Type a message...                                                               ││▶ 📋  Todo 0/0                    █│
││                                                                                 ││▶ Git Changes 5                  ║│
││                                                                                 ││▶ Plugins 0                      ║│
│╰─────────────────────────────────────────────────────────────────────────────────╯│  🐱  ▼                           ↓│
│Build ▼  🟢  Balanced ▼  [🧠 ] [💭 ]  ≡ 7                     ● tark_llm TARK_SIM  [?]╰─────────────────────────────────╯│
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
